# fastf1-predictions

./: .gitattributes  .gitignore  README.md  TODO.md  agent_prompt.txt  app.py  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
LLM/: LLM.ipynb
agents/: agents.py  main.py
backup/: README.md  pyproject.toml
briefing_generator/: README.md  gradio_langchain_agent.py  gradio_sql_agent.py  langchain_text2SQL.ipynb  pyproject.toml
db/: connection.py
multi-agents-analysis/: advanced_text_to_SQL.ipynb  agents.py  laps_report.py  llama_hello_world.py  main.py  spain_practice_1.db  table-QA-huggingface.py  text_to_SQL.py
multi-agents-analysis/data/: laps.db
multi-agents-analysis/storage/: default__vector_store.json  docstore.json  index_store.json
notebooks/: AI_session_overview_generator.ipynb  Bahrain_2023_Q.db  Predict-fuel-efficiency.ipynb  Spain_2024_FP1.db  formula1_databases.py  langchain_text2SQL.ipynb  regression.ipynb  save_data_database.ipynb  sector-3-time-prediction.ipynb  spain_practice_1.db  sqlite_openai_standard_chromadb.ipynb
notebooks/.ipynb_checkpoints/: sector-3-time-prediction-checkpoint.ipynb
notebooks/SQL/: Formula1_Data_Analysis_Views.sqlite3-query  schema.sqlite3-query
tools/: __init__.py  driver_performance.py  event_performance.py  telemetry_analysis.py  tyre_performance.py  weather_impact.py
tools/sql/: driver_performance.query.sql  event_performance.query.sql  telemetry_analysis.query.sql  tyre_performance.query.sql  weather_impact.query.sql
