[tool.poetry]
name = "briefing-generator"
version = "0.1.0"
description = "Using LLMs to analyse and generate race reports"
authors = ["Lucas Draichi <lucasdraichi@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.4"
langgraph = "^0.2.39"
langchain-community = "^0.3.3"
langchain-openai = "^0.2.3"
faiss-cpu = "^1.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
